# ataraxy

./: Cargo.toml
examples/simple_commands/: Cargo.toml
examples/simple_commands/src/: main.rs
macros/: Cargo.toml
src/framework/: context.rs  mod.rs
src/framework/command/: argument.rs
