[package]
name = "ataraxy"
description = "Discord slash commands framework for Serenity"
version = "0.1.1"
edition = "2018"
authors = ["Impossible Reality <impossible@impreality.ml>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ImpossibleReality/ataraxy"
keywords = ["discord", "macros"]
include = ["**/*.rs", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "collector",
] }
ataraxy-macros = { path = "./macros", version = "0.1.1" }
async-trait = "0.1.57"

[workspace]
members = ["macros"]
exclude = ["examples"]

[features]
default = ["serenity/rustls_backend"]
