[package]
name = "simple_commands"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ataraxy = { path = "../../" }
# serenity = {git = "https://github.com/serenity-rs/serenity", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"]}
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "collector",
] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.0"
